--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Hanyangyu"
-  avatar           : "images/myphoto.png"
+  avatar           : "images/myphoto.jpg"
   bio              : "Hong Kong University of Science and Technology, Nanjing University"
   location         : "Hongkong, China"
   employer         :
