--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Lorem ipsum"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
+title                    : "Hanyangyu"
+description              : "Phd candidate in hkust.  "
 repository               : "runningneverstop/runningneverstop.github.io"
 google_scholar_stats_use_cdn : true
 
